After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709270 - qtdemux: Does not support mp2v fourcc for MPEG-2 video
qtdemux: Does not support mp2v fourcc for MPEG-2 video
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-02 14:21 UTC by nils+bugzilla.gnome.org
Modified: 2013-10-04 11:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
output of “gst-feedback-0.10” (82.43 KB, text/plain)
2013-10-02 14:21 UTC, nils+bugzilla.gnome.org
Details

Description nils+bugzilla.gnome.org 2013-10-02 14:21:24 UTC
Created attachment 256271 [details]
output of “gst-feedback-0.10”

VLC and mplayer agree that this is a video file: <http://dx.doi.org/10.1371/journal.pone.0072805.s001>. However, GStreamer cannot find a suitable decoder for the “video/x-gst-fourcc-mp2v“ video stream.

ffplay fails to decode the video properly as well and just draws noise, the output suggesting a corrupted file:
avplay version 0.8.7-6:0.8.7-1, Copyright (c) 2003-2013 the Libav developers
  built on May 20 2013 11:45:37 with gcc 4.7.3
[mov,mp4,m4a,3gp,3g2,mj2 @ 0xaf000480] multiple edit list entries, a/v desync might occur, patch welcome
Unknown MOV field order 0x0200
[mov,mp4,m4a,3gp,3g2,mj2 @ 0xaf000480] max_analyze_duration reached
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'journal.pone.0072805.s001':
  Metadata:
    major_brand     : qt  
    minor_version   : 0
    compatible_brands: qt  
    creation_time   : 2013-04-12 07:23:37
  Duration: 00:00:12.67, start: 0.000000, bitrate: 8471 kb/s
    Stream #0.0(und): Video: 'mp2v', 720x576, 8314 kb/s, PAR 118:81 DAR 295:162, 25 fps, 25 tbr, 90k tbn, 90k tbc
    Metadata:
      creation_time   : 2013-04-12 07:23:37
    Stream #0.1(und): Audio: ac3, 48000 Hz, stereo, s16, 256 kb/s
    Metadata:
      creation_time   : 2013-04-12 07:23:37
Comment 1 Sebastian Dröge (slomo) 2013-10-03 10:00:26 UTC
commit 21947f9d13caab6ea5d46e7e56699e8ea7c530ab
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Thu Oct 3 11:59:25 2013 +0200

    qtdemux: Add support for the mp2v fourcc for MPEG-2 video
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709270