qtdemux: Add support for the mp2v fourcc for MPEG-2 video

https://bugzilla.gnome.org/show_bug.cgi?id=709270